--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,17 +1,20 @@
-.nav-enlace{
+.nav-enlace {
     display: inline-block;
-    background: tomato;
-    color: #fff;
+    background: $color16;
+    color: $color17;
+    border-radius: 30%;
     padding: 10px 30px;
     text-decoration: none;
 }
 
 .nav-enlace:hover {
-    background: rosybrown;
+    background: $color9;
+    color: aliceblue;
 }
 
 nav{
-    background: slateblue;
+    // background: $color7;
+    background-image: url("/home/adri/Documents/2 - Proyecto/z-pictures/di.png");
     padding: 10px;
     display: flex;
     justify-content: space-around;
@@ -19,11 +22,17 @@ nav{
 
 @media(max-width: 600px){
     nav{
-        background: aqua;
+        // background: $color10;
+        background-image: url("/home/adri/Documents/2 - Proyecto/z-pictures/di2.png");
         flex-direction: column;
     }
 
     .nav-enlace{
+        background: $color18;
+        color: $color17;
+        display: flex;
+        justify-content: center;
+        border-radius: 10%;
         margin: 10px 0px;
     }
 }
