--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,26 @@
-$colorUno: #fddb3a;
-$colorDos: #e94560;
-$colorTres: #0f3460;
-$colorCuatro: #16213e;
-$colorCinco: #f0a500;
-
-$color6: #776d8a
+$color1: #e94560;
+$color2: #fddb3a;
+$color3: #0f3460;
+$color4: #16213e;
+$color5: #f0a500;
+$color6: #776d8a;
+$color7: #821752;
+$color8: #edc988;
+$color9: #1aa6b7;
+$color10: #cd0a0a;
+$color11: #ffc93c;
+$color12: #557571;
+$color13: #f1f3f8;
+$color14: #00416d ;
+$color15: #158467 ;
+$color16: #6a2c70 ;
+$color17: #fff ;
+$color18: #fa7d09 ;
+$color19: #4ea0ae ;
+$color20: #000000 ;
+// $color21: # ;
+// $color22: # ;
+// $color23: # ;
+// $color24: # ;
+// $color25: # ;
+// $color26: # ;
