--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,9 +1,9 @@
 header {
     background-color: black;
-    color: $colorCinco;
+    color: $color5;
     font-family: 'Times New Roman', Times, serif;
     font-size: 100%;
-    padding: 20px 50px 0px;
+    padding: 0px 50px 0px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
